--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "start": "json-server --watch db.json --port 8080"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -26,8 +25,7 @@
     "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
     "validator": "^13.15.0",
-    "zustand": "^5.0.3",
-    "json-server": "^0.17.0"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
